css/main.css
/* Start Golbal Rules */
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
body {
  margin: 0;
  padding: 0px;
  font-family: "Roboto", sans-serif;
  height: calc(100vh - 100px);
  background-color: #333;
}
/* End Global Rules*/
/* Start input */
.input-container {
  margin: 100px auto 0px auto;
  width: 500px;
  max-width: 90%;
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: 30px;
  border: 1px solid white;
  padding: 20px;
  border-radius: 6px;
}
.input-container input[type="text"] {
  height: 50px;
  border-radius: 6px;
  padding-left: 10px;
  border: none;
  width: 100%;
}
.input-container input[type="text"]:focus {
  outline: none;
}
.input-container input[type="submit"] {
  background-color: #333;
  border: 2px solid white;
  border-radius: 6px;
  height: 50px;
  width:  100px;
  padding: 10px 20px;
  color: white;
  cursor: pointer;
  transition-duration: 0.3s;
}
.input-container input[type="submit"]:hover {
  background-color: #4f4f4f;
}
/* End input */
/* Start Loader */
.loader {
  margin: 20px auto;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  border-width: 4px;
  border-color: white transparent white white;
  border-style: solid;
  animation-name: spin;
  animation-timing-function: linear;
  animation-duration: 1s;
  animation-iteration-count: infinite;
  display: none;
}
/* End Loader */
/* Start Table */
table {
  margin: 80px auto;
  padding: 5px;
  max-width: 100%;
  width: 800px;
} 
table > caption {
  width: fit-content;
  background-color: #EEE;
  border-radius: 5px;
  margin: 30px auto;
  color: black;
}
table  * {
  padding: 20px;
  border-color: black;
  font-size: 20px;
  text-align: center;
  color: white;
}
table thead th {
  background-color: black;
}
table tbody tr:nth-of-type(2n) {
  background-color: #494949;
}
@media (max-width: 767px) {
  table * {
    font-size: 20px;
    padding: 10px;
  }
  table thead {
    display: none;
  }
  table tbody tr td {
    display: block;
    text-align: left;
    line-height: 1.8;
  }
  table tbody tr td::before {
    margin-right: 5px;
    font-weight: bold;
    text-transform: uppercase;
  }
  table tbody tr td:nth-child(1)::before {
    content: attr(data-number)": ";
  }
  table tbody tr td:nth-child(2)::before {
    content: attr(data-repoName)": ";
  }
  table tbody tr td:nth-child(3)::before {
    content: attr(data-ownerName)": ";
  }
  table tbody tr td:nth-child(4)::before {
    content: attr(data-public)": ";
  }
}
/* End Table */
/* Start Animation */
@keyframes spin {
  0% {
    transform: rotate(0deg);
  } 
  100% {
    transform: rotate(360deg);
  }
}
/* End Animation */

